--- a/views/page/layout.ejs
+++ b/views/page/layout.ejs
@@ -55,7 +55,7 @@
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
 			<div class="container-fluid">
 				<a class="navbar-brand" href="/">
-					<img src="images/logo.png" alt="" />
+					<img src="/images/logo.png" alt="" />
 				</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbars-host" aria-controls="navbars-rs-food" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="icon-bar"></span>
@@ -144,7 +144,7 @@
                                     <h3>Informatsion link</h3>
                                 </div>
                                 <ul class="footer-links">
-                                    <li><a hrgit ef="/">Bosh Menu</a></li>
+                                    <li><a href="/">Bosh Menu</a></li>
                                     <li><a href="/courses/ielts">Kurslarimiz</a></li>
                                     <li><a href="/blog">Yangiliklar</a></li>
                                     <li><a href="/teachers">Uztozlar</a></li>
